--- a/Project/Mvcmovie/Views/Employee/Index.cshtml
+++ b/Project/Mvcmovie/Views/Employee/Index.cshtml
@@ -1,10 +1,10 @@
-@model IEnumerable<MvcMovie.Models.Person>
+@model IEnumerable<MvcMovie.Models.Employee>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Person</h1>
+<h1>Employee</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -13,7 +13,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.PersonId)
+                @Html.DisplayNameFor(model => model.EmployeeId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Age)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FullName)
@@ -27,6 +30,12 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.EmployeeId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Age)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FullName)
             </td>
