--- a/Project/Mvcmovie/Views/HeThongPhanPhoi/Index.cshtml
+++ b/Project/Mvcmovie/Views/HeThongPhanPhoi/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>He Thong Phan Phoi</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
