--- a/Project/Mvcmovie/Views/Home/Index.cshtml
+++ b/Project/Mvcmovie/Views/Home/Index.cshtml
@@ -2,12 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<form asp-action="Index">
-    <label>Nhap ho ten:</label>
-    <input type="text" name="Fullname">
-    <label>Nhap dia chi:</label>
-    <input type="text" name="Address">
-    <input type="submit" value ="Gui du lieu">
-</form>
-
-<h1>@ViewBag.Message</h1>
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
