--- a/Project/Mvcmovie/Views/Employee/Index.cshtml
+++ b/Project/Mvcmovie/Views/Employee/Index.cshtml
@@ -9,6 +9,12 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-controller="Employee" asp-action="Index" method="get">
+    <p>
+        <label>Title: <input type="text" name="id" /></label>
+        <input type="submit" value="Filter" />
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
