--- a/Project/Mvcmovie/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Project/Mvcmovie/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using Mvcmovie.Areas.Identity
 @using Mvcmovie.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using MvcMovie.Models
