--- a/Project/Mvcmovie/Views/Person/Index.cshtml
+++ b/Project/Mvcmovie/Views/Person/Index.cshtml
@@ -1,4 +1,6 @@
 @model IEnumerable<MvcMovie.Models.Person>
+@using X.PagedList;
+@using X.PagedList.Mvc.Core;
 
 @{
     ViewData["Title"] = "Index";
@@ -46,3 +48,5 @@
 }
     </tbody>
 </table>
+
+@Html.PagedListPager((IPagedList) Model, page => Url.Action("Index", new {page = page}), new X.PagedList.Mvc.Core.PagedListRenderOptions { LiElementClasses = new string[] {"page-item"}, PageClasses = new string[] { "page-link" }})
