--- a/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using Mvcmovie.Areas.Identity
-@using Mvcmovie.Areas.Identity.Pages
+@using MvcMovie.Areas.Identity
+@using MvcMovie.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using MvcMovie.Models.Entities
