--- a/Project/Mvcmovie/Views/_ViewImports.cshtml
+++ b/Project/Mvcmovie/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Mvcmovie
-@using Mvcmovie.Models
+﻿@using MvcMovie
+@using MvcMovie.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
